# trendai

./: .gitignore  README.md  SETUP.md  WhatsApp Audio 2026-03-21 at 8.06.18 PM (1).ogg.txt  WhatsApp Audio 2026-03-21 at 8.06.18 PM.ogg.txt  edutrend_ai_project_proposal.txt
backend/: .env.example  Dockerfile  agent.py  auth.py  db.py  dependencies.py  main.py  pyproject.toml  requirements.txt  scraper.py
backend/routes/: auth_routes.py  docs_routes.py  mentor_routes.py  oauth_routes.py  password_routes.py  progress_routes.py  trends_routes.py
edutrend-ai/: package-lock.json  package.json  vercel.json
edutrend-ai/src/: auth.ts
edutrend-ai/src/app/: globals.css  layout.tsx  page.tsx
edutrend-ai/src/app/about/: page.tsx
edutrend-ai/src/app/ai-mentor/: page.tsx
edutrend-ai/src/app/auth/callback/: page.tsx
edutrend-ai/src/app/dashboard/: page.tsx
edutrend-ai/src/app/forgot-password/: page.tsx
edutrend-ai/src/app/learning-path/: page.tsx
edutrend-ai/src/app/login/: page.tsx
edutrend-ai/src/app/signup/: page.tsx
edutrend-ai/src/app/trends/: page.tsx
edutrend-ai/src/components/: Footer.tsx  Navbar.tsx
edutrend-ai/src/lib/: api.ts
